src/Styles/layout/_header.scss
.header {
    padding: 30px 115px;
    @include respondTo(tablet) {
        padding: 24px 17px;
    }
}

.header__nav {
    @include respondTo(tablet) {
        display: none;
    }
    a:nth-of-type(2) {
        margin: 0 30px;
    }
}

.header__logo {
    svg:first-of-type {
        margin-right: 7px;
    }
}

.header__auth {
    @include respondTo(tablet) {
        display: none;
    }
    a:first-of-type {
        margin-right: 30px;
    }
}

.nav__btn {
    border: 2px solid #ebeaed;
    padding: 9px 22px;
    border-radius: 100px;

    &:hover {
        background-color: $clr-primary-dark;
        color: $clr-white;
    }
}

